--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;500&display=swap" rel="stylesheet">
-
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
 </head>
 
@@ -52,10 +52,14 @@
                 <h1>Menu</h1>
             </div>
             <div class="menu">
-
-                <h2 class="espleso"><img src="img/エスプレッソ.jpg" alt=""></h2>
-                <h2 class="pancake"><img src="img/パンケーキ2.jpg" alt=""></h2>
-                <h2 class="ecrea"><img src="img/エクレア.jpg" alt=""></h2>
+                <div class="menu-wrap">
+                    <h2 class="menu-img"><img src="img/エスプレッソ.jpg" alt=""></h2>
+                    <h2 class="menu-img"><img src="img/パンケーキ2.jpg" alt=""></h2>
+                    <h2 class="menu-img"><img src="img/エクレア.jpg" alt=""></h2>
+                </div>
+            </div>
+            <div class="text-center">
+                <a href="#" class="btn bg-right"><span>Menu一覧</span></a>
             </div>
         </section>
 
@@ -66,30 +70,48 @@
             </div>
         </div>
 
+        <div class="access-wrap">
+            <div class="title">
+                <h1>Access</h1>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d103699.19254607627!2d139.67414969894068!3d35.68685574187606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188c0c0b13f54d%3A0xb630953beee48188!2z5p2x5Lqs6YO95Y2D5Luj55Sw5Yy6!5e0!3m2!1sja!2sjp!4v1692249032084!5m2!1sja!2sjp"
+                    width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-        <div class="access">
-            <table class="access-table">
-                <tr class="access-row">
-                    <th class="subject">住所</th>
-                    <td class="data">東京都xxx</td>
-                </tr>
-                <tr class="access-row">
-                    <th class="subject">営業時間</th>
-                    <td class="data">7:00〜16:00</td>
-                </tr>
-                <tr class="access-row">
-                    <th class="subject">電話番号</th>
-                    <td class="data">xxx-xxx-xxx</td>
-                </tr>
-            </table>
+            </div>
+            <div class="access">
+
+                <table class="access-table">
+                    <tr class="access-row">
+                        <th class="subject">住所</th>
+                        <td class="data">東京都xxx</td>
+                    </tr>
+                    <tr class="access-row">
+                        <th class="subject">営業時間</th>
+                        <td class="data">7:00〜16:00</td>
+                    </tr>
+                    <tr class="access-row">
+                        <th class="subject">電話番号</th>
+                        <td class="data">xxx-xxx-xxx</td>
+                    </tr>
+                </table>
+            </div>
         </div>
-
         <footer class="footer">
             <div class="footer-wrap">
                 <ul class="footer-nav">
-                    <li class="nav-access"><a href="">twitter</a></li>
-                    <li class="nav-access"><a href="">instagram</a></li>
-                    <li class="nav-access"><a href="">Line</a></li>
+                    <li class="nav-access">
+                        <i class="ri-twitter-fill"></i>
+                        <a href="">twitter</a>
+                    </li>
+                    <li class="nav-access">
+                        <i class="ri-instagram-fill"></i>
+                        <a href="">instagram</a>
+                    </li>
+                    <li class="nav-access">
+                        <i class="ri-smartphone-fill"></i>
+                        <a href="">LINE</a>
+                    </li>
                 </ul>
 
             </div>
